deploy: 13946dde3a8d9abf9644ad0ff06bae778c1ffd1f

--- a/head/faqs/index.html
+++ b/head/faqs/index.html
@@ -321,7 +321,7 @@
       </h2>
     
 
-<p>If your question isn’t answered here or if you have immediate questions please don’t hesitate to reach out to us on <a href="https://discord.gg/hyperledger_">Discord</a> in the <code class="language-plaintext highlighter-rouge">firefly</code> channel:</p>
+<p>If your question isn’t answered here or if you have immediate questions please don’t hesitate to reach out to us on <a href="https://discord.gg/hyperledger">Discord</a> in the <code class="language-plaintext highlighter-rouge">firefly</code> channel:</p>
 
         
 
