deploy: 2d92165e2f729948d84d08dcc6eb25e6192eb7f4

--- a/head/architecture/ping_pong_txflow.html
+++ b/head/architecture/ping_pong_txflow.html
@@ -417,7 +417,7 @@
     
 
 <ul>
-  <li>Inpsect the request data</li>
+  <li>Inspect the request data</li>
   <li>Retrieve data asset by hash</li>
   <li>Send the private data in a private message
     <ul>
