deploy: e08643c6f9ba1ca852baa349174ee234bb128cad

--- a/head/tutorials/custom_contracts/index.html
+++ b/head/tutorials/custom_contracts/index.html
@@ -309,7 +309,7 @@
   <li><strong>Contract Interface</strong>: FireFly defines a common, blockchain agnostic way to describe smart contracts. This is referred to as a Contract Interface. A contract interface is written in the FireFly Interface (FFI) format. It is a simple JSON document that has a name, a namespace, a version, a list of methods, and a list of events.</li>
 </ul>
 
-<p>For more details, you can also have a look at the <a href="../../reference/firefly_interface_format">Reference page for the FireFly Interface Format</a>.</p>
+<p>For more details, you can also have a look at the <a href="/firefly/head/reference/firefly_interface_format.html">Reference page for the FireFly Interface Format</a>.</p>
 
 <p>For blockchains that offer a DSL describing the smart contract interface, such as Ethereum’s ABI (Application Binary Interface), FireFly offers a convenience tool to convert the DSL into the FFI format.</p>
 
